Added Post methods for all entities. Refactored DTO classes. Replaced ListDTO field with a List. Added integration tests for all the methods.