@@ -1,14 +1,14 @@
 package com.mihaineagu.web.controllers;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.ObjectWriter;
+import com.mihaineagu.data.api.v1.models.CountryDTO;
 import com.mihaineagu.data.api.v1.models.LocationDTO;
 
-import com.mihaineagu.data.api.v1.models.SportListDTO;
+import com.mihaineagu.data.api.v1.models.RegionDTO;
 import com.mihaineagu.service.interfaces.LocationService;
-import org.junit.jupiter.api.BeforeEach;
+import com.mihaineagu.service.interfaces.RegionService;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentMatchers;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.orm.jpa.AutoConfigureDataJpa;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
@@ -17,6 +17,7 @@ import org.springframework.http.MediaType;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -26,6 +27,7 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
@@ -35,8 +37,12 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 class LocationControllerTest extends AbstractControllerTest{
 
 
+    public static final String LOCATION = "Location";
     @MockBean
     LocationService locationService;
+
+    @MockBean
+    RegionService regionService;
 
     @Autowired
     MockMvc mockMvc;
@@ -53,16 +59,17 @@ class LocationControllerTest extends AbstractControllerTest{
                 .param("sports","false"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.locationListDTO", hasSize(3)))
-                .andExpect(jsonPath("$.locationListDTO[0].sport", nullValue()))
-                .andExpect(jsonPath("$.locationListDTO[0].sport", nullValue()))
-                .andExpect(jsonPath("$.locationListDTO[0].sport", nullValue()));
+                .andExpect(jsonPath("$.locationListDTO[0].sports", nullValue()))
+                .andExpect(jsonPath("$.locationListDTO[0].sports", nullValue()))
+                .andExpect(jsonPath("$.locationListDTO[0].sports", nullValue()));
 
     }
 
     @Test
     void getLocationByRegionWithSportTest() throws Exception {
-        List<LocationDTO> locationDTOList = List.of(LocationDTO.builder().sport(new SportListDTO()).build(),
-                LocationDTO.builder().sport(new SportListDTO()).build(), LocationDTO.builder().sport(new SportListDTO()).build());
+        List<LocationDTO> locationDTOList = List.of(LocationDTO.builder().sports(Collections.emptyList()).build(),
+                LocationDTO.builder().sports(Collections.emptyList()).build(),
+                LocationDTO.builder().sports(Collections.emptyList()).build());
 
         when(locationService.findByRegionIdWithoutSports(any())).thenReturn(locationDTOList);
 
@@ -71,9 +78,9 @@ class LocationControllerTest extends AbstractControllerTest{
                 .param("sports","false"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.locationListDTO", hasSize(3)))
-                .andExpect(jsonPath("$.locationListDTO[0].sport",notNullValue()))
-                .andExpect(jsonPath("$.locationListDTO[1].sport",notNullValue()))
-                .andExpect(jsonPath("$.locationListDTO[2].sport",notNullValue()));
+                .andExpect(jsonPath("$.locationListDTO[0].sports",notNullValue()))
+                .andExpect(jsonPath("$.locationListDTO[1].sports",notNullValue()))
+                .andExpect(jsonPath("$.locationListDTO[2].sports",notNullValue()));
 
     }
 
@@ -91,6 +98,7 @@ class LocationControllerTest extends AbstractControllerTest{
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.uri", equalTo(URI)));
     }
+
     @Test
     void getLocationIdNotFoundTest() throws Exception {
 
@@ -101,4 +109,73 @@ class LocationControllerTest extends AbstractControllerTest{
                 .andExpect(status().is4xxClientError())
                 .andExpect(jsonPath("$.errorMessage", equalTo("Requested entity not found!")));
     }
+
+
+    @Test
+    void addNewLocationMissingRegionTest() throws Exception {
+
+        LocationDTO locationDTO  = LocationDTO.builder().locationName(LOCATION).build();
+
+        when(regionService.findByIdWithoutLocation(anyLong())).thenReturn(Optional.empty());
+
+        mockMvc.perform(post("/api/v1/regions/1/locations")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectWriter.writeValueAsString(locationDTO)))
+                .andExpect(status().is4xxClientError())
+                .andExpect(jsonPath("$.errorMessage", equalTo(NOT_FOUND)));
+
+    }
+
+    @Test
+    void addNewLocationAlreadyExistsTest() throws Exception {
+
+        LocationDTO locationDTO  = LocationDTO.builder().locationName(LOCATION).build();
+
+        when(regionService.findByIdWithoutLocation(anyLong())).thenReturn(Optional.of(new RegionDTO()));
+        when(locationService.findIfExistent(ArgumentMatchers.any(),anyLong())).thenReturn(Boolean.TRUE);
+
+        mockMvc.perform(post("/api/v1/regions/1/locations")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectWriter.writeValueAsString(locationDTO)))
+                .andExpect(status().is4xxClientError())
+                .andExpect(jsonPath("$.errorMessage", equalTo(EXISTS_ERROR)));
+
+    }
+
+    @Test
+    void addNewLocationNotSavedTest() throws Exception {
+
+        LocationDTO locationDTO  = LocationDTO.builder().locationName(LOCATION).build();
+
+        when(regionService.findByIdWithoutLocation(anyLong())).thenReturn(Optional.of(new RegionDTO()));
+        when(locationService.findIfExistent(ArgumentMatchers.any(),anyLong())).thenReturn(Boolean.FALSE);
+
+        when(locationService.saveLocation(ArgumentMatchers.any(), ArgumentMatchers.any())).thenReturn(Optional.empty());
+
+        mockMvc.perform(post("/api/v1/regions/1/locations")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectWriter.writeValueAsString(locationDTO)))
+                .andExpect(status().is5xxServerError())
+                .andExpect(jsonPath("$.errorMessage", equalTo(OPERATION_FAILED)));
+
+    }
+
+    @Test
+    void addNewLocationSavedTest() throws Exception {
+
+        LocationDTO locationDTO  = LocationDTO.builder().locationName(LOCATION).build();
+
+        when(regionService.findByIdWithoutLocation(anyLong())).thenReturn(Optional.of(new RegionDTO()));
+        when(locationService.findIfExistent(ArgumentMatchers.any(),anyLong())).thenReturn(Boolean.FALSE);
+
+        when(locationService.saveLocation(ArgumentMatchers.any(), ArgumentMatchers.any())).thenReturn(Optional.of(locationDTO));
+
+        mockMvc.perform(post("/api/v1/regions/1/locations")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectWriter.writeValueAsString(locationDTO)))
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.locationName", equalTo(locationDTO.getLocationName())));
+
+    }
+
 }
